# Projet-PARKY

./: Makefile  config.h  configure  fileservice.txt  project4V2 3(1).glade.bak  reservations.txt
autom4te.cache/: requests  traces.0
aziz_gassab/: config.status  configure.in  project4V2 3(1).gladep.bak
aziz_gassab/autom4te.cache/: output.0  traces.1
aziz_gassab/po/: Makefile  Makefile.in
aziz_gassab/src/: Makefile.am  callbacks.c  fileservice.txt  interface.c  interface.c.bak  interface.h  main.c  service.c  service.h
aziz_gassab/src/.deps/: main.Po
src/: Makefile  Makefile.in  callbacks.h  glade2  interface.h.bak
